# quicktrace-public

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MessageFormatter.cpp  MessageFormatter.h  MessageFormatterCommon.h  MessageParser.cpp  MessageParser.h  QtFmtGeneric.cpp  QtFmtGeneric.h  Qtc.cpp  Qtc.h  QtcDecl.h  QuickTrace.cpp  QuickTrace.h  QuickTrace.org  QuickTrace.py  QuickTraceCommon.h  QuickTraceFileHeader.h  QuickTraceFormatString.h  QuickTraceFormatStringTraits.h  QuickTraceFormatStringUtils.h  QuickTraceFormatter.h  QuickTraceOptFormatter.h  QuickTraceRingBuf.h  README.md  Registration.cpp  Registration.h  WallClockQt.h  _QuickTrace.cpp  qtclear.cpp  qtctl.cpp  qtpkt  qttail.cpp
go/test/: QuickTrace_test.go
test/: CMakeLists.txt  QtArguments.py  QtDiskFull.py  QtFmtTest.cpp  QtFmtTest.py  QtFormatterForceLegacy.cpp  QtFormatterOrder.cpp  QtFormatterOrderLegacy.cpp  QtLongString.cpp  QtLongString.py  QtMaxStrLen.cpp  QtMaxStrLen.py  QtNoCopy.cpp  QtOffBitTest.cpp  QtOffBitTest.py  QtPluginType.cpp  QtPythonApiTest.py  QtRegisterTest.cpp  QtRotateLogTest.cpp  QtTailCloseStdoutTest.py  QtTailCorruptionTest.cpp  QtTailCorruptionTest.py  QtTailDeleteMultiFileTest.py  QtTailDeleteSingleFileTest.py  QtTailForeverLogTest.py  QtTailMultiFileTest.py  QtTailNewLogMessageOrderTest.cpp  QtTailNewLogMessageOrderTest.py  QtTailNewLogMessageTest.py  QtTailOverrunTest.cpp  QtTailOverrunTest.py  QtTailPluginTest.cpp  QtTailPluginTest.py  QtTailReopenTest.py  QtTailRolloverTest.py  QtTailSingleFileTest.py  QtTailTest.py  QtVaryingArgs.py  QtWrongArgType.py  QtcTest6.c  (+17 more)
